package ar.utn.ba.ddsi.MetaMapa.models.entities;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Administrador {
    private String nombre;
    private String apellido;
}