package ar.utn.ba.ddsi.MetaMapa.models.entities;

public enum OrigenHecho {
    CARGA_MANUAL,
    CONTRIBUYENTE,
    DATASET
}