@startuml

class Hecho{
- id: Long
- APIid: Long
- titulo: String
- descripcion: String
- categoria: Categoria
- contenidoMultimedia: List<ContenidoMultimedia>
- lugarAcontecimiento: Coordenada
- fechaHecho: LocalDate
- fechaDeCarga: LocalDateTime
- fechaUltimaActualizacion: LocalDateTime
- eliminado: boolean
}

enum OrigenHecho{
CARGA_MANUAL
CONTRIBUYENTE
DATASET
PROXY
}

class Categoria{
- nombre: String
}

class ContenidoMultimedia{
- path: String
}

class SolicitudDeEliminacion{
- descripcion: String
- hecho: Hecho
- fechaDeCarga: LocalDateTime
- fechaDeResolucion: LocalDateTime
- estado: EstadoSolicitud
- solicitante: Contribuyente
- administradorQueResolvio: Administrador
- CANT_MINIMA_DE_CARACTERES: int
--
+ resolver(Estado estado, Administrador administrador): void
}

enum EstadoSolicitud {
    PENDIENTE
    ACEPTADA
    SUGERIDOACAMBIO
    RECHAZADA
    ACEPTADACONSUGERENCIA
    RECHAZADOPORSPAM
}


class Coordenada{
- latitud: Double
- longitud: Double
--
+ comoArray(): Double[]
}

class Administrador{
- nombre: String
- apellido: String
}

class Contribuyente{
- id: Long
- nombre: String
- apellido: String
- fechaNacimiento: LocalDate
--
+ getEdad() : Int
}

class API{
- id: Long
- url: String
- metamapa: boolean
- adapter: IAPIAdapter

+ getAll() : List<Hecho>
+ getAllDesde(LocalDateTime desde): List<Hecho>
}

class Cache {
- hecho: Hecho
- instanteDeCarga: LocalDateTime
}

Hecho --> Categoria
Hecho --> Coordenada
Hecho -->"*" SolicitudDeEliminacion
Hecho -->"*" ContenidoMultimedia
Hecho -r-> OrigenHecho
Hecho --> Contribuyente

Cache --> Hecho
API ..> Cache

SolicitudDeEliminacion --> Hecho
SolicitudDeEliminacion -d-> EstadoSolicitud
SolicitudDeEliminacion --> Contribuyente
SolicitudDeEliminacion --> Administrador

@enduml